Fix mobile viewport horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,10 @@ h1, h2, h3, h4, h5, h6, strong {
     padding: 20px;
 }
 
+.mobile .box {
+    overflow: hidden;
+}
+
     .box .caption {
         position: relative;
         
